--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import "/node_modules/materialize-css/bin/materialize.css";
+@import "../node_modules/materialize-css/bin/materialize.css";
 @import "http://fonts.googleapis.com/css?family=Abel";
 @import "http://fonts.googleapis.com/css?family=Oswald:400,300,700";
 #index-banner {
@@ -97,7 +97,7 @@ section h5 {
   font-weight: 400;
 }
 #what .row {
-  min-height: 430px;
+  /*min-height: 430px;*/
 }
 #what .analytics-container {
   position: relative;
