--- a/styles/styles.css
+++ b/styles/styles.css
@@ -359,6 +359,10 @@ section h5 {
   -o-transition: all 0.3s linear;
   transition: all 0.3s linear;
 }
+
+.step-number h5 {
+  text-align: center;
+}
 #how .circlenum:hover,
 #how .circlenum.active {
   cursor: default;
